# ProjectModernCpp

./: .clang-format  .clang-tidy  Antrenament.cpp  Antrenament.h  CMakeLists.txt  Card.cpp  Card.h  Card.ixx  Game.cpp  Game.h  Game.ixx  Player.cpp  Player.h  Player.ixx  QResource.qrc  README.md  Wizard.cpp  Wizard.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: Antrenament.h  AntrenamentWidget.h  Board.h  Card.h  Explosion.h  Game.h  MainWindow.h  Player.h
include/GameComponents/: Arena.h  Board.h  Card.h  JsonUtils.h  Player.h
include/GameModes/: Antrenament.h  DuelulCombinat.h  DuelulElementelor.h  DuelulVrajitorilor.h  Game.h  Turneu.h  Viteza.h
include/Interface/: AlertWidget.h  AntrenamentWidget.h  BoardWidget.h  DisplayBoard.h  DisplayHand.h  ElementDialog.h  ElementWidget.h  ExplosionDialog.h  HandWidget.h  IAntrenament.h  IDuelulCombinat.h  IDuelulElementelor.h  IDuelulVrajitorilor.h  IRapid.h  ITurneu.h  MainWindow.h  SpecialOptions.h  VrajitorDialog.h  VrajitorWidget.h
include/Powers/: ElementPower.h  Explosion.h  MagicPower.h  Wizard.h
lib/: pch.h
src/: Explosion.cpp  Game.cpp  MainWindow.cpp  Player.cpp  Player.h  Wizard.cpp  Wizard.h  main.cpp
src/Board/: CardStack.cpp  CardStack.h  GameBoard.cpp  GameBoard.h
src/Card/: Card.cpp  Card.h
src/Game/: Antrenament.cpp  Antrenament.h  DuelulVrajitorilor.cpp  DuelulVrajitorilor.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h
src/GameBoard/: Board.cpp  Board.h
src/GameComponents/: Arena.cpp  Board.cpp  CMakeLists.txt  Card.cpp  JsonUtils.cpp  Player.cpp
src/GameModes/: Antrenament.cpp  DuelulCombinat.cpp  DuelulElementelor.cpp  DuelulVrajitorilor.cpp  Game.cpp  Turneu.cpp  Viteza.cpp
src/Interface/: AlertWidget.cpp  AntrenamentWidget.cpp  AntrenamentWidget.h  BoardWidget.cpp  DisplayBoard.cpp  DisplayHand.cpp  ElementDialog.cpp  ElementWidget.cpp  ExplosionDialog.cpp  HandWidget.cpp  IAntrenament.cpp  IDuelulCombinat.cpp  IDuelulElementelor.cpp  IDuelulVrajitorilor.cpp  IRapid.cpp  ITurneu.cpp  MainWindow.cpp  MainWindow.h  SpecialOptions.cpp  TUI.cpp  TUI.h  VrajitorDialog.cpp  VrajitorWidget.cpp
src/MagicPower/: ElementPower.cpp  ElementPower.h  Explosion.cpp  Explosion.h  MagicPower.cpp  MagicPower.h  Wizard.cpp  Wizard.h
src/Player/: Player.cpp  Player.h
src/Powers/: ElementPower.cpp  Explosion.cpp  MagicPower.cpp  Wizard.cpp
src/utils/: Logger.cpp  Logger.h
tests/: BoardTests.cpp  CMakeLists.txt  CardTests.cpp
